aster/tests/pass/char_literal.as
# Aster1 test: char literal

def main() returns i32
    var c is u8 = 'a'
    if c == 97 then
        return 0
    return 1

